--- a/slides/Intro-1-2-3.html
+++ b/slides/Intro-1-2-3.html
@@ -4,8 +4,7 @@
     <title>Chapters 1, 2, and 3 of Price Analysis</title>
     <meta charset="utf-8" />
     <script src="libs/header-attrs/header-attrs.js"></script>
-    <link href="libs/remark-css/default.css" rel="stylesheet" />
-    <link href="libs/remark-css/default-fonts.css" rel="stylesheet" />
+    <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
   </head>
   <body>
     <textarea id="source">
@@ -22,19 +21,25 @@ class: center, middle, inverse, title-slide
 
 
 
+
+
 ---
 
 # Please read chapters 1 and 2 on your own
 
 ---
 
-# How to find information
+# Chapter 3: How to find information
 
 + Market Commentary
 + Futures Price Quotes
  + Futures Symbols
 + Futures Spreads
 + USDA Reports
+
+---
+
+# Market Commentary
 
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
