--- a/slides/FuturesContractsandHedging-slides.html
+++ b/slides/FuturesContractsandHedging-slides.html
@@ -246,7 +246,7 @@ class: center, middle
 
 ---
 
-### Farmer
+### Farmer Hedge
 
 + Pants her crop in April waits for it to grow and then mature through the summer and fall
 + Harvests in November. 
@@ -255,51 +255,97 @@ class: center, middle
 
 A Grain Elevator in Royal, IL 
 
-&lt;a title="Daniel Schwen, CC BY-SA 4.0 &amp;lt;https://creativecommons.org/licenses/by-sa/4.0&amp;gt;, via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File:Grain_elevators_in_Royal,_IL.jpg"&gt;&lt;img width="512" alt="Grain elevators in Royal, IL" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/01/Grain_elevators_in_Royal%2C_IL.jpg/512px-Grain_elevators_in_Royal%2C_IL.jpg"&gt;&lt;/a&gt;
+[![](assets/Grain_elevator_royal_IL.jpg)](https://commons.wikimedia.org/wiki/File:Grain_elevators_in_Royal,_IL.)
 
 Source: [Daniel Schwen, CC-License](https://commons.wikimedia.org/wiki/File%3AGrain_elevators_in_Royal%2C_IL.jpg)
 
 ---
 
-The farmer's entire income for the year will come from the sale of this grain, and a lot can happen to the price of corn between April and November, leaving the farmer exposed to tremendous income risk. Many farmers desire the ability to reduce this income risk by entering into a contractual relationship that reduces the uncertainty in the income they receive. Currently there are several ways they can achieve this.
+### Farmer Hedge
+
+Hedge -&gt; Reduce Uncertainty
 
 1.  Crop Insurance. They can purchase a crop insurance policy that will pay them an indemnity if either price goes down, yield is low, or both depending on the exact specification of the contract. This activity does not directly interact with the futures market, so it does not have a large effect on price.
 
-2.  Forward Price Contract. Local grain elevators (sometimes called merchandisers) typically offer forward contracts to buy grain from farmers. Along with the cash price they post publicly on a daily basis, they will post forward 'bids'. The forward contract simply states that the farmer will deliver a certain quantity of grain to that elevator within a specific date range, usually a window of a few weeks. Upon delivery, the elevator will pay the farmer the price agreed to (the forward bid price) on the date they entered int the forward contract together. This eliminates price uncertainty for the farmer, as long as the elevator does not go bankrupt before the delivery date of the contract, they will have the forward bid price with certainty. The forward contract transfers price risk to the elevator. The elevator does not want to entertain price risk during this time either, but the elevator has a contract to buy the grain at a specific price, but the price at which they can turn around and sell it to someone else is uncertain. They will transfer the price risk to speculators in the futures market by selling futures. So farmers entering into forward contracts with local grain merchandisers ultimately results in selling of futures contracts by the grain merchandisers. We will see in an examples below how exactly selling futures eliminates price risk.
+2.  Forward Price Contract. 
 
-3.  Futures Market. Alternatively, a farmer could go directly to the futures market themselves to sell futures contracts and reduce price uncertainty. This reduces, but not eliminates uncertainty because the farmer still faces basis risk in this case. A detailed example will help explain how this works.
+---
+## Farmer Hedge
 
-Suppose on May 1st, the farmer's local elevator is offering to buy corn for \$3.50, and the May futures contract is trading at \$3.60. Since the May futures contract is about to expire, the cash price and Futures price are not separated by much time (we have discussed briefly how prices through time along the futures forward curve provide incentives to store) and thus should not be very different because of time. However, the local elevator's price can differ from the Futures price because they are at different locations. For example, the elevator in the photo at Royal, IL is about 116 miles from the 'regular for delivery' elevators in the Calmet-Sag Chanel near Orland Park, IL. The \$0.10 difference between the May futures price and the cash price on May 1st in Royal, IL is largely due to the geographic distance between the two locations. The price distance over space is called the basis. Basis can be computed compared to any of the futures contracts, but it makes sense to consider basis compared to the futures contract that corresponds to the planned cash sale.
+3.  Futures Market. Alternatively, a farmer could go directly to the futures market themselves to sell futures contracts and reduce price uncertainty. 
+  + Farmer still faces *basis risk* in this case. 
+
 
 `$$Basis = Cash Price - Futures Price$$`
 
-Also on May 1st, the December futures contract price is \$3.75. If the farmer wants to reduce price uncertainty they will sell futures, sometimes referred to as 'selling forward' or 'selling ahead'.
+---
+## Example Farmer Hedge With Futures
+
++ May 1st, local elevator is offering to buy corn for $3.50, and the December futures contract price is $3.75. 
 
 **To Hedge - Take the same action in the futures market (buy or sell) that you will do in the cash market at a future date**
 
-The farmer will sell corn in the cash market in November, so to hedge she should sell (the December) futures to hedge. Consider two cases, one where the Dec futures price in November turned out to be \$4.00, and one where the Dec futures price in November turned out to be \$3.60.
+---
+## Example Farmer Hedge With Futures
 
-**Dec Futures Price went Up to \$4.00, Basis Unchanged**
++ Should sell (the December) futures to hedge. 
+
++ Consider two cases, one where the Dec futures price in November turned out to be $4.00  
+
++And one where the Dec futures price in November turned out to be $3.60.
+
+**Dec Futures Price went Up to $4.00, Basis Unchanged**
+
+---
+## Example Farmer Hedge With Futures
+
 
 |        Date         |              Action              | Cash Price in Royal, IL |  Dec Corn Futures Price   |     Basis     |
 |:-------------------:|:--------------------------------:|:-----------------------:|:-------------------------:|:-------------:|
-|       May 1st       |         Sell Dec Futures         |         \$3.50          |          \$3.75           | -\$0.25 (Dec) |
-|       Nov 1st       | Buy Dec Futures &amp; Sell Cash Corn |         \$3.75          |          \$4.00           | -\$0.25 (Dec) |
-| Profit Calculation, |         Cash and Futures         |         \$3.75          | \$3.75 - \$4.00 = -\$0.25 |               |
-|                     |      Net per bushel revenue      |     \$3.75 - \$0.25     |         = \$3.50          |               |
+|       May 1st       |         Sell Dec Futures         |         $3.50           |          $3.75            | -$0.25        |
+|       Nov 1st       | Buy Dec Futures &amp; Sell Cash Corn |                         |                           | -$0.25        |
+| Profit Calculation, |         Cash and Futures         |                         |                           |               |
+|                     |      Net per bushel revenue      |                         |                           |               |
 
-With the basis unchanged, the farmer eliminated the uncertainty over the price at which she will sell her crop. By 'selling ahead' in the futures market, the price was locked in, except for the basis. Note that in this case, the farmer would have liked to be able to sell for \$3.75 instead of \$3.50 net, but by locking in the price with futures she gave up the potential for upside. In the next example, though, we show the advantage. In the next example, prices go down between May and November, and the futures hedge protects the farmer from these deteriorating prices.
+---
+## Example Farmer Hedge With Futures
+
+
+|        Date         |              Action              | Cash Price in Royal, IL |  Dec Corn Futures Price   |     Basis     |
+|:-------------------:|:--------------------------------:|:-----------------------:|:-------------------------:|:-------------:|
+|       May 1st       |         Sell Dec Futures         |         $3.50           |          $3.75            | -$0.25        |
+|       Nov 1st       | Buy Dec Futures &amp; Sell Cash Corn |         $3.75           |          $4.00            | -$0.25        |
+| Profit Calculation, |         Cash and Futures         |         $3.75           | $3.75 - $4.00 = -$0.25    |               |
+|                     |      Net per bushel revenue      |     $3.75 -  $0.25      |         = $3.50           |               |
+
+
+---
+## Example Farmer Hedge With Futures
 
 **Dec Futures Price went Down to \$3.60, Basis Unchanged**
 
 |        Date         |              Action              | Cash Price in Royal, IL |  Dec Corn Futures Price   |     Basis     |
 |:-------------------:|:--------------------------------:|:-----------------------:|:-------------------------:|:-------------:|
-|       May 1st       |         Sell Dec Futures         |         \$3.50          |          \$3.75           | -\$0.25 (Dec) |
-|       Nov 1st       | Buy Dec Futures &amp; Sell Cash Corn |         \$3.35          |          \$3.60           | -\$0.25 (Dec) |
-| Profit Calculation, |         Cash and Futures         |         \$3.35          | \$3.75 - \$3.60 = +\$0.15 |               |
-|                     |      Net per bushel revenue      |     \$3.35 + \$0.15     |         = \$3.50          |               |
+|       May 1st       |         Sell Dec Futures         |         $3.50           |          $3.75            | -$0.25        |
+|       Nov 1st       | Buy Dec Futures &amp; Sell Cash Corn |                         |                           | -$0.25        |
+| Profit Calculation, |         Cash and Futures         |                         |                           |               |
+|                     |      Net per bushel revenue      |                         |                           |               |
 
-By selling Dec futures ahead of the cash sale, price risk was reduced. It was reduced, but not eliminated because by hedging with futures there is still basis risk. The next examples show what happens when the basis is uncertain. Consider now that the futures price was unchanged in November, that is in November the Dec futures is still trading at \$3.80. Now however, consider two cases. The basis widens to -\$0.50, and the basis narrows to \$0.00.
+---
+## Example Farmer Hedge With Futures
+
+**Dec Futures Price went Down to \$3.60, Basis Unchanged**
+
+|        Date         |              Action              | Cash Price in Royal, IL |  Dec Corn Futures Price   |     Basis     |
+|:-------------------:|:--------------------------------:|:-----------------------:|:-------------------------:|:-------------:|
+|       May 1st       |         Sell Dec Futures         |         $3.50           |          $3.75            | -$0.25        |
+|       Nov 1st       | Buy Dec Futures &amp; Sell Cash Corn |         $3.35           |          $3.60            | -$0.25        |
+| Profit Calculation, |         Cash and Futures         |         $3.35           | $3.75 - $3.60 = +$0.15    |               |
+|                     |      Net per bushel revenue      |     $3.35 + $0.15       |         = $3.50           |               |
+
+---
+## Example Farmer Hedge With Futures
+
 
 **Dec Futures Price Unchanged, Basis now -\$0.50**
 
