price charts in price reaction

--- a/slides/PriceReactionto-slides.html
+++ b/slides/PriceReactionto-slides.html
@@ -244,8 +244,11 @@ Market prices react strongly to USDA reports when the reports inject significant
   
   + The future contracts are specified for a quantity of 5,000 bushels.
   
-  
-![Figure 2: Price of July 2010 corn on June 30, 2010 before and after the release of Planted Acres Report.](assets\100630.png)
+---
+
+Figure 2: Price of July 2010 corn on June 30, 2010 before and after the release of Planted Acres Report
+
+![](PriceReactionto-slides_files/figure-html/unnamed-chunk-1-1.png)&lt;!-- --&gt;
   
 ---
 
@@ -278,8 +281,10 @@ Market prices react strongly to USDA reports when the reports inject significant
  
 ---
 
-![Figure 3: Price of December 2010 corn on October 8th, 2010 before and after the release of the WASDE Report.](assets\101008.png)
+Figure 3: Price of December 2010 corn on October 8th, 2010 before and after the release of the WASDE Report
 
+
+![](PriceReactionto-slides_files/figure-html/unnamed-chunk-2-1.png)&lt;!-- --&gt;
 ---
 
 ###Three Examples from 2010 Marketing year (CONT...) 
@@ -292,7 +297,10 @@ Market prices react strongly to USDA reports when the reports inject significant
   
 ---
 
-![Figure 5:  Price of May 2011 corn on March 31st, 2011 before and after the release of the Planted Acres Report.](assets\110331.png)
+Figure 5:  Price of May 2011 corn on March 31st, 2011 before and after the release of the Planted Acres Report
+
+
+![](PriceReactionto-slides_files/figure-html/unnamed-chunk-3-1.png)&lt;!-- --&gt;
 ---
 
 ## Conclusions
